DarrenS: Fixed some spacing and message showing old data instead of new data

--- a/src/main/webapp/css/main.css
+++ b/src/main/webapp/css/main.css
@@ -519,6 +519,7 @@ table.openings-calendar div.highlight {
 .profile-basic-stats .right-float-img-button {
 	height: 100%;
 	margin-right: 0.8rem;
+	margin-top: 0.8rem;
 }
 /* css for make & confirm new appointment(s) page */
 
